build/overlays/e2e/e2e-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: collector
  name: collector-deployment 
  namespace: apolicy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: collector
  template:
    metadata:
      labels:
        component: collector
    spec:
      serviceAccountName: sa-apolicy
      containers:
        - name : collector
          image: local/e2e-collector    
          envFrom:
            - secretRef:
                name: apolicy-secret
          env:
            - name: INCLUDED_NAMESPACES
              value: e2e,ns-best,ns-risky,default,demo,ns-sa-managed,ns-sa-managed2
            - name: EXCLUDED_NAMESPACES
              value: 
            - name: INCLUDED_WORKLOADS
              value:
            - name: EXCLUDED_WORKLOADS
              value:
            - name: RISK_WEIGHT_WORKLOADS
              value:
            - name: RISK_WEIGHT_ACCESS
              value:
